Added GBXML to model run input

--- a/examples/testproject/datadriven/notebooks/21_RW_OverheatingToolbox_NewTemplate.ipynb
+++ b/examples/testproject/datadriven/notebooks/21_RW_OverheatingToolbox_NewTemplate.ipynb
@@ -2,25 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\testproject\\\\datadriven\\\\notebooks', 'C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev', 'C:\\\\engDev\\\\git_mf\\\\pyRevit\\\\MFTools.extension', 'C:\\\\engDev\\\\git_mf\\\\SAP', 'C:\\\\engDev\\\\git_mf\\\\IES\\\\dev', 'C:\\\\engDev\\\\git_mf\\\\engDevSetup', 'C:\\\\engDev\\\\git_mf\\\\ipyrun', 'C:\\\\engDev\\\\git_mf\\\\ipyword', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\python37.zip', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\DLLs', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main', '', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib\\\\site-packages', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib\\\\site-packages\\\\Pythonwin', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\r.woods\\\\.ipython']\n"
+     ]
+    }
+   ],
    "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
     "import os\n",
     "NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
     "import pandas as pd\n",
     "from IPython.display import update_display, display, Image, JSON, Markdown, HTML, clear_output\n",
     "import subprocess\n",
+    "import sys\n",
+    "print(sys.path)\n",
     "\n",
     "from ipyrun.ipyrun import RunApp\n",
-    "from ipyrun.ipyrun_overheating import RunAppReport, RunAppsOverheating"
+    "from ipyrun.ipyrun_overheating import RunAppReport, RunAppsOverheating\n",
+    "import ipyaggrid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -76,7 +89,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fde2d07bb41640979130f716cda230c9",
+       "model_id": "4b39b6bba3b24b53af97d87710e34cb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,7 +103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6931cc5e6d1f48a9b69dba3c14e0b84c",
+       "model_id": "d0a2f2aac87f4166ae09892e6f2c201d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fac46e3ecf049d2948387ef15c69d91",
+       "model_id": "8d2adaefd1804ed1b5fa5bd0ba6500e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc60cb38cbed419db926e3fe1ce4c721",
+       "model_id": "1f57fd2464fa4ac3a74bda752a8945fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,7 +181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b427710adc24dfea0c24933a28006a4",
+       "model_id": "9ca0f2cc28ad4df9931dbac75b7695c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +278,7 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:mf_main] *",
+   "display_name": "Python [conda env:mf_main]",
    "language": "python",
    "name": "conda-env-mf_main-py"
   },
