--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
@@ -769,7 +769,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f89b323d5a1427dba6e7dad94667b83",
+       "model_id": "126dbf157b4744b5861d5325535a08d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -783,7 +783,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abe7f6283ade4ff0a3230cc6cf1b3af7",
+       "model_id": "1c4d4a970eae442e8c64753ba572d7cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -830,7 +830,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e44aab752a3c40a2bc5eec63ece76705",
+       "model_id": "a635af4f6e1e4695b5ecfd527d44fefe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -844,7 +844,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "122bfd34701d4acc989af18839d20d3a",
+       "model_id": "ab6ff27957b943f8bda50e7e6be531e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -934,7 +934,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4425649330f24391966b7a4694753320",
+       "model_id": "1ae3162d1ad44f44ab7f922652f8007a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -948,7 +948,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c259a3f2d8634a7780971f562fdd2e63",
+       "model_id": "cc5307308aad409ebeeb8e32d47a4d4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -962,7 +962,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e998fd024e3b4e98b65dd8e7d0e27c28",
+       "model_id": "9b673bee8669442dabf0d8a6fe7fe331",
        "version_major": 2,
        "version_minor": 0
       },
@@ -976,7 +976,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45186c2139f94293a28a90e68a725089",
+       "model_id": "ccba73a677a94893908d9b102c06e7e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -990,7 +990,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2de46c58c4284924b62dade0b8fb5ca1",
+       "model_id": "bca168d12a284964988f2b685f40b58f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1004,7 +1004,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab3b4d05db1a4348b80f28541da033b1",
+       "model_id": "86dfc85a9bae459583cc079336f80f1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1018,7 +1018,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24943616252842dfb1a7ce02dc0a52d6",
+       "model_id": "9a268dff05cc41409c0b40be68fe8d86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1032,7 +1032,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f88ff5834f84455db8fadd4c96f85b71",
+       "model_id": "25680ce8c33445abbfb896650c9cc453",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1095,7 +1095,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fddd034276b40c99ce5912f2738dc3c",
+       "model_id": "0c81b4c71bae4144971f39f2183f0468",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1109,7 +1109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a44b4a4c849489cb156adcf50e8edfb",
+       "model_id": "2f6c4440b92643fa87d7bc955db18abc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1123,12 +1123,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b106f6ea30949da9e76e5d0abbb9d53",
+       "model_id": "b2b6df35f05f4a20ab764b4fb5495e32",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', …"
+       "VBox()"
       ]
      },
      "metadata": {},
@@ -1328,7 +1328,7 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:mf_main] *",
+   "display_name": "Python [conda env:mf_main]",
    "language": "python",
    "name": "conda-env-mf_main-py"
   },
