--- a/ipyrun/ipyrun_overheating.ipynb
+++ b/ipyrun/ipyrun_overheating.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 2
@@ -33,6 +33,7 @@
     "from mf_modules.mydocstring_display import display_module_docstring\n",
     "from mf_modules.jupyter_formatting import display_python_file\n",
     "from mf_modules.pydtype_operations import read_json, write_json \n",
+    "from mf_scripts.gbxml import GbxmlParser, GbxmlReport\n",
     "\n",
     "# from this repo\n",
     "# this is an unpleasant hack. should aim to find a better solution\n",
@@ -57,21 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'RunApp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-274131e5fb6f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mRunAppReport\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRunApp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mRunApps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;31m# In order to pick which graphs to show,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;31m# the reporting function needs a custom function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;31m# to add the graph names to a dropdown\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'RunApp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class RunAppReport(RunApp):\n",
     "    # In order to pick which graphs to show, \n",
@@ -210,7 +199,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EditJsonOverheating(EditJson):\n",
+    "\n",
+    "    def __init__(self, config):\n",
+    "        super().__init__(config) \n",
+    "        self.gbxmldf = None\n",
+    "        self._init_custom_buttons()\n",
+    "        \n",
+    "    def _init_custom_buttons(self):\n",
+    "        self.update_gbxml = widgets.Button(description='update from gbxml',button_style='warning',style={'font_weight':'bold'})\n",
+    "        self.button_bar.children += (self.update_gbxml,)\n",
+    "        #self.custom_bar = widgets.HBox([self.update_gbxml])\n",
+    "        self.update_gbxml.on_click(self._test)\n",
+    "        \n",
+    "    def _test(self, sender):\n",
+    "        gbxml_fpth = None\n",
+    "        for li in self.flattened_li():\n",
+    "            if 'tags' in li:\n",
+    "                if 'model_fpth' in li['tags']:\n",
+    "                    dirname = os.path.dirname(li['value'])\n",
+    "                    filename = os.path.basename(os.path.dirname(li['value'])) + '.xml'\n",
+    "                    gbxml_fpth = os.path.join(dirname,filename)\n",
+    "        if os.path.exists(gbxml_fpth):\n",
+    "            self._save_changes(None)\n",
+    "            self.li = read_json(self.fpth_inputs)\n",
+    "            for li in self.li:\n",
+    "                if 'tags' in li:\n",
+    "                    if 'fabrics-breakdown' in li['tags']:\n",
+    "                        fsum = GbxmlReport(gbxml_fpth).fabric_summ\n",
+    "                        li['editable'] = False\n",
+    "                        li['widget'] = \"ipyagrid\"\n",
+    "                        li['value'] = fsum.to_json(orient=\"columns\")\n",
+    "                        \n",
+    "                        '''for index, row in fsum.iterrows():\n",
+    "                            tmplabel = copy.copy(textlabel)\n",
+    "                            tmplabel['name'] = 'U Value'\n",
+    "                            tmplabel['label'] = str(index)\n",
+    "                            tmplabel['value'] = str(row[\"U-value_WPerSquareMeterK\"])\n",
+    "                            li['value'].append(tmplabel)'''\n",
+    "            self._save_changes(None)\n",
+    "            self._update_from_file()\n",
+    "            self.apps_layout.children = self._get_apps_layout()\n",
+    "        \n",
+    "    def flattened_li(self):\n",
+    "        tmp_li = []\n",
+    "        def flatten(cur_li):\n",
+    "            for li in cur_li:\n",
+    "                tmp_li.append(li)\n",
+    "                if isinstance(li[\"value\"], list) and li[\"value\"]:\n",
+    "                    if isinstance(li[\"value\"][0], dict):\n",
+    "                        flatten(li[\"value\"])\n",
+    "            return\n",
+    "                    \n",
+    "        flatten(self.li)\n",
+    "        return tmp_li\n",
+    "\n",
+    "    def display(self):\n",
+    "        box = widgets.VBox([\n",
+    "            self.button_bar,\n",
+    "            self.temp_message,\n",
+    "            self.inputform,\n",
+    "        ])\n",
+    "        self.layout = box\n",
+    "        display(self.layout)\n",
+    "        self.apps_layout = widgets.VBox(self._get_apps_layout())\n",
+    "        display(self.apps_layout)\n",
+    "        display(self.out)\n",
+    "        \n",
+    "class RunAppOverheating(RunApp):\n",
+    "    def _edit_inputs(self, sender):\n",
+    "        with self.out:\n",
+    "            clear_output()\n",
+    "            editjson = EditJsonOverheating(self.config)\n",
+    "            #display(editjson.test())\n",
+    "            display(editjson)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,6 +289,9 @@
    "source": [
     "class RunAppsOverheating(RunAppsTemplated):\n",
     "\n",
+    "    def __init__(self, di, app=RunAppOverheating, folder_name=None):\n",
+    "        super().__init__(di, app, folder_name) \n",
+    "            \n",
     "    def _create_process(self, process_name='TEMPLATE', template_process=None):\n",
     "        process_di = copy.deepcopy(self.di)\n",
     "        process_di['process_name'] = process_name\n",
@@ -449,6 +523,78 @@
     "            display(self.comp_out_btn)\n",
     "            display(fig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
